--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "test": "jest",
     "typecheck": "tsc --noEmit"
   },
+  "dependencies": {
+    "cls-hooked": "^4.2.2"
+  },
   "devDependencies": {
+    "@types/cls-hooked": "^4.3.0",
     "@types/jest": "^24.0.22",
+    "@types/uuid": "^3.4.6",
     "@typescript-eslint/eslint-plugin": "^2.7.0",
     "@typescript-eslint/parser": "^2.7.0",
     "eslint": "^6.6.0",
@@ -25,7 +30,8 @@
     "prettier": "^1.19.1",
     "rimraf": "^3.0.0",
     "ts-jest": "^24.1.0",
-    "typescript": "^3.7.2"
+    "typescript": "^3.7.2",
+    "uuid": "^3.3.3"
   },
   "husky": {
     "hooks": {
