--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,8 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
 
+    "downlevelIteration": true,
+
     /* Advanced Options */
     "forceConsistentCasingInFileNames": true
   },
