--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "types": "lib/index.d.ts",
   "author": "James Sawle <jamessawle@hotmail.com>",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jamessawle/request-context.git"
+  },
   "scripts": {
     "build": "rimraf lib/ && tsc",
     "lint": "eslint 'src/**/*.{js,ts,tsx}'",
@@ -18,6 +22,7 @@
   },
   "devDependencies": {
     "@types/cls-hooked": "^4.3.0",
+    "@types/express": "^4.17.2",
     "@types/jest": "^24.0.22",
     "@types/uuid": "^3.4.6",
     "@typescript-eslint/eslint-plugin": "^2.7.0",
