--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cls-hooked": "^4.2.2"
   },
   "devDependencies": {
+    "@fluffy-spoon/substitute": "^1.104.0",
     "@types/cls-hooked": "^4.3.0",
     "@types/express": "^4.17.2",
     "@types/jest": "^24.0.22",
