--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,10 @@
 version: 2
 jobs:
-  build:
+  build_feature:
     docker:
-      - image: circleci/node:12
+      - image: circleci/node:12.13
 
-    working_directory: ~/repo
+    working_directory: ~/jwt-authentication
 
     steps:
       - checkout
@@ -12,63 +12,62 @@ jobs:
       # Download and cache dependencies
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
+          - v1-dependencies-{{ checksum "package-lock.json" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
 
       - run: npm ci
 
       - save_cache:
           paths:
             - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
+          key: v1-dependencies-{{ checksum "package-lock.json" }}
 
-      - run: npm run build
       - run: npm test
+      - run: npm start build
 
   build_and_publish:
     docker:
-      - image: circleci/node:12
+      - image: circleci/node:12.13
 
-    working_directory: ~/repo
+    working_directory: ~/jwt-authentication
 
     steps:
       - checkout
 
-      # Download and cache dependencies
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
+          - v1-dependencies-{{ checksum "package-lock.json" }}
+          - v1-dependencies-
 
       - run: npm ci
 
       - save_cache:
           paths:
             - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
+          key: v1-dependencies-{{ checksum "package-lock.json" }}
 
-      - run: npm run build
+      - run: npm audit
       - run: npm test
+      - run: npm start build
 
-      -run:
-          name: Publish package to NPM registry
+      - run:
+          name: Publish the package to npm private registry
           command: |
             echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
-            npm config set scope @jamessawle
+            npm config set scope @rightmove
             npm publish
 
 workflows:
   version: 2
-  feature_branch:
+  build_feature_branch:
     jobs:
-      - build:
+      - build_feature:
           context: node-library
           filters:
             branches:
               ignore: master
-  master:
+  build_master:
     jobs:
       - build_and_publish:
           context: node-library
