--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     docker:
       - image: circleci/node:12.13
 
-    working_directory: ~/jwt-authentication
+    working_directory: ~/request-context
 
     steps:
       - checkout
@@ -23,14 +23,14 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package-lock.json" }}
 
+      - run: npm run build
       - run: npm test
-      - run: npm start build
 
   build_and_publish:
     docker:
       - image: circleci/node:12.13
 
-    working_directory: ~/jwt-authentication
+    working_directory: ~/request-context
 
     steps:
       - checkout
@@ -48,14 +48,14 @@ jobs:
           key: v1-dependencies-{{ checksum "package-lock.json" }}
 
       - run: npm audit
+      - run: npm run build
       - run: npm test
-      - run: npm start build
 
       - run:
           name: Publish the package to npm private registry
           command: |
             echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
-            npm config set scope @rightmove
+            npm config set scope @jamessawle
             npm publish
 
 workflows:
