--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  build_feature:
+  build:
     docker:
       - image: circleci/node:12.13
 
@@ -60,17 +60,19 @@ jobs:
 
 workflows:
   version: 2
-  build_feature_branch:
+  build:
     jobs:
-      - build_feature:
+      - build:
           context: node-library
           filters:
-            branches:
-              ignore: master
-  build_master:
+            tags:
+              ignore: /^v.*/
+  build_and_publish:
     jobs:
       - build_and_publish:
           context: node-library
           filters:
             branches:
               only: master
+            tags:
+              only: /^v.*/
