--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  build:
+  build_only:
     docker:
       - image: circleci/node:12.13
 
@@ -62,7 +62,7 @@ workflows:
   version: 2
   build:
     jobs:
-      - build:
+      - build_only:
           context: node-library
           filters:
             tags:
