Can not combine tag and branch filtering, becomes an or

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,6 +73,6 @@ workflows:
           context: node-library
           filters:
             branches:
-              only: master
+              ignore: /.*/
             tags:
               only: /^v.*/
